# SqlPractice

./: README.md  docker-compose.yml  learn.ipynb  main.py  pyproject.toml
