[project]
name = "sqlpractice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "duckdb>=1.2.2",
    "huggingface-hub[cli,hf-xet]>=0.31.4",
    "ipython>=9.2.0",
    "jupyter>=1.1.1",
    "numpy>=2.2.6",
    "pgvector>=0.4.1",
    "polars>=1.29.0",
    "python-dotenv>=1.1.0",
    "tqdm>=4.67.1",
]
